--- a/markdown/动态规划_斐波那契数列.md
+++ b/markdown/动态规划_斐波那契数列.md
@@ -1,5 +1,7 @@
 # Python 算法及数据结构
 记不得过去的人，注定要重蹈覆辙
+
+动态规划的本质就是用空间换时间，很多时候我们不在乎程序浪费了多少空间，因为现在的存储空间很廉价，但是我们很在乎时间，它非常昂贵。
 # 斐波那契数列
 ```python
 def fib(n):
